--- a/hackathon2-frontend/css/style.css
+++ b/hackathon2-frontend/css/style.css
@@ -1,59 +1,227 @@
-body {
-	display: grid;
-	align-items: center;
+.carousel-inner {
+	height: 350px;
+	border: 1px solid;
+}
+
+.carousel-inner ul li {
+	padding-top: 10px;
+	margin-right: 30px;
+	list-style: none;
+	width: 200px;
+	height: 200px;
+	float: left;
+}
+
+.carousel-inner ul li div {
+	margin-top: 12px;
+	font-weight: bold;
+	font-size: 16px;
+}
+
+.carousel-inner ul li img {
+	cursor: pointer;
+}
+
+.carousel-inner ul {
+	display: flex;
 	text-align: center;
+	align-items: center;
 	justify-content: center;
 }
 
-#header {
-	width: 1000px;
-	height: 150px;
-	border: 1px solid;
+.carousel-control-prev-icon {
+	width: 50px;
+	height: 50px;
+	background-color: black;
+}
+
+.carousel-control-next-icon {
+	width: 50px;
+	height: 50px;
+	background-color: black;
+}
+
+.header {
+	padding-top: 10px;
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	height: 120px;
 	text-align: center;
+	justify-content: space-between
 }
 
-#body {
-	display: grid;
-	grid-template-rows: 100px 400px 300px;
-	width: 1000px;
-	height: 850px;
-	border: 1px solid;
+.header ul li {
+	padding-top: 20px;
+	float: left;
+	list-style: none;
+	width: 70px;
 }
 
-#footer {
-	width: 1000px;
-	height: 150px;
-	border: 1px solid;
+.header1 {
+	cursor: pointer;
+	padding-top: 20px;
+	font-weight: bold;
+	font-size: 30px;
+	padding-left: 210px;
 }
 
-#header div:first-child {
-	margin-left: 60px;
-	width: 200px;
-	height: 50px;
-	border: 1px solid;
+.header2 {
+	cursor: pointer;
+	padding-right: 195px;
 }
 
-#header div:last-child {
-	margin-right: 80px;
-	width: 300px;
-	height: 50px;
-	border: 1px solid;
+.header2 ul li {
+	margin-left: 20px;
 }
 
 .list1 {
-	margin: 20px;
+	display: grid;
+	grid-row: 30px 370px;
+	height: 600px;
 	border: 1px solid;
 }
 
-.list2 {
-	margin: 20px;
-	border: 1px solid;
+.slide-text {
+	padding: 15px;
+	display: flex;
+	justify-content: space-between;
+	text-align: center;
+	align-items: center;
 }
 
-.list3 {
-	margin: 20px;
-	border: 1px solid;
+.slide-text-one {
+	margin-left: 205px;
+	font-size: 25px;
+	font-weight: bold;
 }
+
+.slide-text-two {
+	cursor: pointer;
+	margin-right: 190px;
+	width: 100px;
+	border: 1px solid lightgray;
+	border-radius: 10px;
+}
+
+.footer {
+	background-color: #ebebeb;
+	height: 80px;
+	border: 1px solid;
+	display: flex;
+	justify-content: space-between;
+	text-align: center;
+	align-items: center;
+}
+
+.footer-left ul li {
+	list-style: none;
+}
+
+.footer-left {
+	list-style: none;
+	padding-left: 165px;
+	padding-top: 20px;
+}
+
+.footer-right {
+	padding-right: 190px;
+}
+
+.footer-btn {
+	background-color: white;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+}
+
+.list1-one ul {
+	padding-top: 10px;
+	padding-left: 170px;
+	display: flex;
+	float: left;
+}
+
+.list1-one ul li {
+	cursor: pointer;
+	font-size: 16px;
+	font-weight: bold;
+	padding-left: 40px;
+	list-style: none;
+}
+
+.list1-two {
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+}
+
+.view-list {
+	display: flex;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	margin-bottom: 60px;
+}
+
+.view-size {
+	background-color: #ebebeb;
+	border: 1px solid;
+	width: 500px;
+	height: 400px;
+	margin-bottom: 20px;
+}
+
+.view-list span {
+	padding: 10px;
+}
+
+.add-btn {
+	width: 80px;
+	border-radius: 10px;
+}
+
+.cancel-btn {
+	width: 80px;
+	border-radius: 10px;
+}
+
+.login-list {
+	display: flex;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	margin-bottom: 120px;
+}
+
+.login-size {
+	background-color: #ebebeb;
+	border: 1px solid;
+	width: 400px;
+	height: 200px;
+	margin-bottom: 20px;
+}
+
+.login-btn {
+	border: 1px solid;
+	width: 400px;
+	height: 50px;
+}
+
+.login-search {
+	cursor: pointer;
+	padding-top: 10px;
+	display: flex;
+	padding-left: 195px;
+	text-decoration: underline;
+}
+
+.login-search span {
+	margin-left: 15px;
+}
+
+.view-body {
+	height: 1200px;
+}
+
+.list
