--- a/hackathon2-frontend/css/style.css
+++ b/hackathon2-frontend/css/style.css
@@ -379,3 +379,15 @@
 	justify-content: center;
 	list-style: none;
 }
+
+.d-block {
+	border-radius: 5px;
+	transition: all 0.2s linear;
+	overflow: hidden;
+	background-size: cover;
+	
+}
+
+.poster:hover img {
+  transform: scale(1.1);
+}
